--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,20 @@ body {
   }
   
   #graph-container {
-    width: 80vw;
-    height: 80vh;
+    width: 90vw;
+    height: 100vh;
     border: 1px solid #ddd;
+  }
+
+  #counters {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+    height: 100%;
+    height: 200px;
+    background-color: grey;
+    text-align: center;
+    text-wrap: wrap;
   }
   
